# QuantaAlpha4Crypto

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  strategy_core_architecture_plan.md
configs/: crypto_original_flow_futures_pressure_reversion.example.json  crypto_original_flow_futures_taker_flow_exhaustion.example.json  crypto_original_flow_smoke.example.json
docs/: HANDOFF.md  PLAN.md
docs/adr/: 0001-fixed-grid-out-of-sample-factor-evaluation.md  0002-use-walk-forward-validation-for-factor-generalization.md  0003-default-walk-forward-window-for-crypto-factors.md  0004-model-binance-specific-trading-costs.md  0005-separate-feature-data-from-pnl-data.md  0006-use-crypto-native-panel-instead-of-qlib-data.md  0007-build-crypto-native-subsystem-beside-qlib-modules.md  0008-use-python-callables-as-first-stage-factor-interface.md  (+8 more)
quantaalpha_crypto/: README.md  __init__.py  data.py
tests/: test_base_model.py  test_binance_local_data_adapter.py  test_candidate_factor_library.py  test_crypto_factor_batch_runner.py  test_crypto_factor_proposal.py  test_crypto_factor_runner.py  test_crypto_factor_workspace.py  test_crypto_llm_provider.py  test_crypto_mining_cli.py  test_crypto_mining_round.py  test_crypto_module_boundaries.py  test_crypto_panel_builder.py  test_crypto_portfolio_backtest.py  test_evaluation_grid.py  test_factor_callable_evaluation.py  test_factor_evaluation_report.py  test_factor_gates.py  test_metrics.py  test_mining_loop.py  test_original_flow_crypto_mining_config.py  test_walk_forward.py  test_walk_forward_validation.py
(+36 files in other folders)
