[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
]

[project]
authors = [
  {email = "tangzy27@mail2.sysu.edu.cn", name = "Ziyi Tang"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "QuantaAlpha Crypto - crypto strategy candidate mining and evaluation"
dynamic = [
  "dependencies",
  "optional-dependencies",
  "version",
]
keywords = [
  "Quantitative Finance",
  "Factor Mining",
  "Large Language Models",
  "Autonomous Agents",
]
name = "quantaalpha-crypto"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
quantaalpha-crypto = "quantaalpha_crypto.mining.cli:main"

[project.urls]
homepage = "https://github.com/QuantaAlpha/quantaalpha"
issue = "https://github.com/QuantaAlpha/quantaalpha/issues"

[tool.setuptools]
packages = {find = {where = ["."], include = ["quantaalpha_crypto*"], exclude = ["old*"]}}

[tool.pytest.ini_options]
norecursedirs = ["old", "artifacts", ".git", "__pycache__"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
docs = {file = ["requirements/docs.txt"]}

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"
